tests/baselines/reference/assignmentCompatability40.errors.txt
tests/cases/compiler/assignmentCompatability40.ts(9,1): error TS2322: Type 'interfaceWithPublicAndOptional<数字, 文字>' is not assignable to type 'classWithPrivate<数字>'.
  Property 'one' is private in type 'classWithPrivate<数字>' but not in type 'interfaceWithPublicAndOptional<数字, 文字>'.


==== tests/cases/compiler/assignmentCompatability40.ts (1 errors) ====
    module __test1__ {
        export interface interfaceWithPublicAndOptional<T,U> { one: T; two?: U; };  var obj4: interfaceWithPublicAndOptional<number,string> = { one: 1 };;
        export var __val__obj4 = obj4;
    }
    module __test2__ {
        export           class classWithPrivate<T> { constructor(private one: T) {} }                       var x5 = new classWithPrivate(1);;
        export var __val__x5 = x5;
    }
    __test2__.__val__x5 = __test1__.__val__obj4
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'interfaceWithPublicAndOptional<数字, 文字>' is not assignable to type 'classWithPrivate<数字>'.
!!! error TS2322:   Property 'one' is private in type 'classWithPrivate<数字>' but not in type 'interfaceWithPublicAndOptional<数字, 文字>'.